Fix locale generation

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -60,7 +60,7 @@
   "passwords_dont_match": "الكلمات السرية غير متطابقة.",
   "email_already_exists": "عنوان البريد الإلكتروني هذا موجود بالفعل.",
   "user_already_exists": "هذا المستخدِم موجود بالفعل.",
-  "unsubscribe": "إلغاء الإشتراك",
+  "unsubscribe": "الغ الإشتراك",
   "subscribe": "اتبع",
   "messages": "لرسائل",
   "banned_users": "المستخدمون المحظورون",
@@ -70,6 +70,52 @@
   "show_avatars": "إظهار الصور الرمزية",
   "search": "البحث",
   "send_message": "أرسل الرسالة",
+  "local": "محلي",
+  "from": "من",
+  "banner": "اللافتة",
+  "display_name": "الاسم",
+  "bio": "السيرة",
+  "not_a_mod_or_admin": "ليس مشرفًا ولا مديرًا.",
+  "couldnt_find_post": "تعذر العثور على المشاركة.",
+  "invalid_url": "الرابط غير صالح.",
+  "couldnt_like_comment": "تعذر الإعجاب بالتعليق.",
+  "couldnt_update_comment": "تعذر تحديث التعليق.",
+  "no_comment_edit_allowed": "لا يُسمح لك تعديل التعليق.",
+  "couldnt_save_comment": "تعذر حفظ التعليق.",
+  "couldnt_get_comments": "تعذر جلب التعليق.",
+  "report_reason_required": "سبب الإبلاغ مطلوب.",
+  "report_too_long": "تقرير الإبلاغ طويل.",
+  "couldnt_create_report": "تعذر إتشاء التقرير.",
+  "couldnt_resolve_report": "تعذر تحليل.",
+  "invalid_post_title": "عنوان المنشور غير",
+  "couldnt_create_post": "تعذر انشاء المشاركة.",
+  "couldnt_like_post": "تعذر الإعجاب بالمنشور.",
+  "couldnt_find_community": "تعذر العثور على المجتمع.",
+  "couldnt_get_posts": "تعذر جلب المشاركات",
+  "no_post_edit_allowed": "لا يسمح لك تعديل المشاركة.",
+  "couldnt_save_post": "تعذر حفظ المشاركة.",
+  "site_already_exists": "الموقع موجود.",
+  "couldnt_update_site": "تعذر تحديث الموقع.",
+  "invalid_community_name": "اسم غير صالح.",
+  "community_already_exists": "المجتمع موجود مسبقًا.",
+  "community_moderator_already_exists": "مشىرف المجتمع موجود مسبقًا.",
+  "community_follower_already_exists": "هذا العضو مشترك في المجمع مسبقا.",
+  "not_a_moderator": "ليس مشرفًا.",
+  "couldnt_update_community": "تعذر تحديث المجتمع.",
+  "no_community_edit_allowed": "لا يُسمح لك تعديل المجتمع.",
+  "system_err_login": "خطأ في النظام. جرب إعادة الولوج.",
+  "community_user_already_banned": "هذا العضو محضور مسبقا.",
+  "couldnt_find_that_username_or_email": "تعذر العثور على مستخدم يملك هذا البريد أو اسم المستخدم.",
+  "invalid_password": "كلمة المرور غير صالحة. يجب ألّا تزيد عن 60 محرفًا.",
+  "captcha_incorrect": "رمز التحقق خاطئ.",
+  "invalid_username": "اسم المستخدم غير صالح.",
+  "bio_length_overflow": "لا يمكن أن تزيد السيرة عن 300 محرف.",
+  "couldnt_update_private_message": "تعذر تحديث الرسالة الخاصة.",
+  "couldnt_update_post": "تعذر تحديث",
+  "couldnt_create_private_message": "تعذر انشاء الرسالة الخاصة.",
+  "no_private_message_edit_allowed": "لا يسمح لك تعديل الرسالة الخاصة.",
+  "post_title_too_long": "عنوان المشاركة طويل.",
+  "delete_account_confirm": "تحذير: ستحذف جميع بياناتك. أدخل كلمة المرور لتأكيد.",
   "top_day": "المتداول",
   "top_week": "المتداول هذا",
   "top_month": "المتداول هذا",
