--- a/lib/l10n/intl_fa.arb
+++ b/lib/l10n/intl_fa.arb
@@ -68,10 +68,10 @@
   "couldnt_update_post": "ناتوای در به‌روزرسانی مطلب",
   "email_already_exists": "این رایانامه از قبل وجود دارد.",
   "user_already_exists": "این کاربر از قبل وجود دارد.",
-  "number_of_users_online": "{count,plural, =1{{count} کاربر برخط}}",
-  "number_of_comments": "{count,plural, =1{{count} نظر}}",
-  "number_of_posts": "{count,plural, =1{{count} مطلب}}",
-  "number_of_users": "{count,plural, =1{{count} کاربر}}",
+  "number_of_users_online": "{count,plural, other{{count} کاربر برخط}}",
+  "number_of_comments": "{count,plural, other{{count} نظر}}",
+  "number_of_posts": "{count,plural, other{{count} مطلب}}",
+  "number_of_users": "{count,plural, other{{count} کاربر}}",
   "delete_account_confirm": "هشدار: این کنش، تمام اطلاعات شما را برای همیشه پاک می‌کند. برای تایید، گذرواژه خود را وارد کنید.",
   "new_password": "گذرواژه جدید",
   "verify_password": "تایید گذرواژه",
