--- a/lib/l10n/intl_ja.arb
+++ b/lib/l10n/intl_ja.arb
@@ -93,11 +93,11 @@
   "post_title_too_long": "投稿のタイトルが長すぎます。",
   "email_already_exists": "メールアドレスが既に使用されています。",
   "user_already_exists": "ユーザーは既に存在します。",
-  "number_of_users_online": "{count,plural, =1{{count} 名のユーザーがオンライン}}",
-  "number_of_comments": "{count,plural, =1{{count} 件のコメント}}",
-  "number_of_posts": "{count,plural, =1{{count} 件の投稿}}",
-  "number_of_subscribers": "{count,plural, =1{{count} 名の登録者}}",
-  "number_of_users": "{count,plural, =1{{count} 名のユーザー}}",
+  "number_of_users_online": "{count,plural, other{{count} 名のユーザーがオンライン}}",
+  "number_of_comments": "{count,plural, other{{count} 件のコメント}}",
+  "number_of_posts": "{count,plural, other{{count} 件の投稿}}",
+  "number_of_subscribers": "{count,plural, other{{count} 名の登録者}}",
+  "number_of_users": "{count,plural, other{{count} 名のユーザー}}",
   "unsubscribe": "登録解除",
   "subscribe": "登録",
   "messages": "メッセージ",
