--- a/lib/l10n/intl_pl.arb
+++ b/lib/l10n/intl_pl.arb
@@ -2,7 +2,7 @@
   "@@locale": "pl",
   "settings": "Ustawienia",
   "password": "Hasło",
-  "email_or_username": "Email lub Nazwa Użytkownika",
+  "email_or_username": "Email lub Login",
   "posts": "Posty",
   "comments": "Komentarze",
   "modlog": "Log moderatorski",
@@ -31,11 +31,11 @@
   "yes": "tak",
   "no": "nie",
   "avatar": "Awatar",
-  "banner": "Banner",
+  "banner": "Baner",
   "display_name": "Nazwa wyświetlana",
   "bio": "Opis",
   "email": "Email",
-  "matrix_user": "Użytkownik Matrixa",
+  "matrix_user": "Login na Matrixie",
   "sort_type": "Sortuj typ",
   "type": "Rodzaj",
   "show_nsfw": "Pokaż treści NSFW (+18)",
@@ -43,14 +43,14 @@
   "delete_account": "Usuń Konto",
   "saved": "Zapisane",
   "communities": "Społeczności",
-  "users": "Użytkownicy",
+  "users": "osoby zalogowane",
   "theme": "Motyw",
   "language": "Język",
   "hot": "Popularne",
   "new_": "Nowe",
   "old": "Stare",
   "top": "Najpopularniejsze",
-  "chat": "Czat",
+  "chat": "Dyskusja",
   "admin": "administrator",
   "by": "przez",
   "not_an_admin": "Nie jest administratorem.",
@@ -88,23 +88,23 @@
   "couldnt_update_community": "Nie udało się zaktualizować Społeczności.",
   "no_community_edit_allowed": "Nie masz uprawnień do edycji społeczności.",
   "system_err_login": "Błąd systemu. Spróbuj wylogować się i następnie zalogować ponownie.",
-  "community_user_already_banned": "Użytkownik społeczności jest już zbanowany.",
-  "couldnt_find_that_username_or_email": "Nie udało się znaleźć takiej nazwy użytkownika lub adresu email.",
+  "community_user_already_banned": "Login już zablokowany w tej społeczności.",
+  "couldnt_find_that_username_or_email": "Nie udało się znaleźć takiego loginu lub adresu email.",
   "password_incorrect": "Hasło niepoprawne.",
   "registration_closed": "Rejestracja Zamknięta",
   "invalid_password": "Nieprawidłowe hasło. Hasło musi mieć mniej niż 60 znaków.",
   "passwords_dont_match": "Hasła nie pasują do siebie.",
   "captcha_incorrect": "Captcha niepoprawna.",
-  "invalid_username": "Nieprawidłowa nazwa użytkownika.",
+  "invalid_username": "Nieprawidłowy login.",
   "bio_length_overflow": "To pole nie może przekraczać 300 znaków.",
-  "couldnt_update_user": "Nie udało się zaktualizować użytkownika.",
+  "couldnt_update_user": "Nie udało się zaktualizować.",
   "couldnt_update_private_message": "Nie udało się zaktualizować prywatnej wiadomości.",
   "couldnt_update_post": "Nie udało się zaktualizować postów",
   "couldnt_create_private_message": "Nie udało się stworzyć prywatnej wiadomości.",
   "no_private_message_edit_allowed": "Brak uprawnień do edycji prywatnej wiadomości.",
   "post_title_too_long": "Tytuł posta zbyt długi.",
   "email_already_exists": "Email już istnieje.",
-  "user_already_exists": "Użytkownik już istnieje.",
+  "user_already_exists": "Login już istnieje.",
   "unsubscribe": "Odsubskrybuj",
   "subscribe": "Subskrybuj",
   "messages": "Wiadomości",
