--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -55,11 +55,11 @@
   "by": " ",
   "not_an_admin": "不是管理员。",
   "couldnt_find_post": "无法找到帖子。",
-  "not_logged_in": "未登录.",
+  "not_logged_in": "未登录。",
   "site_ban": "你已被本站拉黑",
   "community_ban": "你已被此社群拉黑。",
   "downvotes_disabled": "踩已禁用",
-  "invalid_url": "URL无效.",
+  "invalid_url": "URL无效。",
   "locked": "已锁定",
   "couldnt_create_comment": "无法创建评论。",
   "couldnt_like_comment": "无法点赞评论。",
@@ -67,10 +67,10 @@
   "no_comment_edit_allowed": "没有编辑评论的权限。",
   "couldnt_save_comment": "无法保存评论。",
   "couldnt_get_comments": "无法获取评论。",
-  "report_reason_required": "需要报告原因.",
-  "report_too_long": "报告时间过长.",
-  "couldnt_create_report": "无法创建报告.",
-  "couldnt_resolve_report": "无法解析报告.",
+  "report_reason_required": "需要报告原因。",
+  "report_too_long": "报告时间过长。",
+  "couldnt_create_report": "无法创建报告。",
+  "couldnt_resolve_report": "无法解析报告。",
   "invalid_post_title": "帖子标题无效",
   "couldnt_create_post": "无法创建帖子。",
   "couldnt_like_post": "无法点赞帖子。",
@@ -80,11 +80,11 @@
   "couldnt_save_post": "无法保存帖子。",
   "site_already_exists": "站点已存在。",
   "couldnt_update_site": "无法更新站点。",
-  "invalid_community_name": "无效名称.",
+  "invalid_community_name": "无效名称。",
   "community_already_exists": "社群已存在。",
   "community_moderator_already_exists": "社群监管人已存在。",
   "community_follower_already_exists": "社群关注者已存在。",
-  "not_a_moderator": "不是仲裁员.",
+  "not_a_moderator": "不是仲裁员。",
   "couldnt_update_community": "无法更新社群。",
   "no_community_edit_allowed": "没有编辑社群的权限。",
   "system_err_login": "系统错误。请尝试注销后重新登入。",
@@ -95,7 +95,7 @@
   "invalid_password": "密码无效。密码长度必须小于60个字符。",
   "passwords_dont_match": "密码不匹配。",
   "captcha_incorrect": "验证码不正确。",
-  "invalid_username": "用户名无效",
+  "invalid_username": "用户名无效。",
   "bio_length_overflow": "自我介绍不能超过300个字符。",
   "couldnt_update_user": "无法更新用户。",
   "couldnt_update_private_message": "无法更新私信。",
@@ -103,7 +103,7 @@
   "couldnt_create_private_message": "无法创建私信。",
   "no_private_message_edit_allowed": "没有编辑私信的权限。",
   "post_title_too_long": "帖子标题过长。",
-  "email_already_exists": "邮箱已占用.",
+  "email_already_exists": "邮箱已占用。",
   "user_already_exists": "用户已存在。",
   "number_of_users_online": "{count,plural, =1{{count} 在线用户} other{{count} 名在线用户}}",
   "number_of_comments": "{count,plural, =1{{count} 条评论} other{{count} 条评论}}",
@@ -128,5 +128,6 @@
   "top_all": "全部推荐",
   "most_comments": "最多评论",
   "new_comments": "新评论",
-  "active": "活跃"
+  "active": "活跃",
+  "not_a_mod_or_admin": "不是仲裁员或管理员。"
 }
