--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -105,11 +105,11 @@
   "post_title_too_long": "게시물 제목이 너무 깁니다.",
   "email_already_exists": "이메일이 이미 존재합니다.",
   "user_already_exists": "사용자가 이미 존재합니다.",
-  "number_of_users_online": "{count,plural, =1{접속자수 {count}}}",
-  "number_of_comments": "{count,plural, =1{덧글수 {count}}}",
-  "number_of_posts": "{count,plural, =1{게시물 수 {count}}}",
-  "number_of_subscribers": "{count,plural, =1{구독자수{count}}}",
-  "number_of_users": "{count,plural, =1{가입자수 {count}}}",
+  "number_of_users_online": "{count,plural, other{접속자수 {count}}}",
+  "number_of_comments": "{count,plural, other{덧글수 {count}}}",
+  "number_of_posts": "{count,plural, other{게시물 수 {count}}}",
+  "number_of_subscribers": "{count,plural, other{구독자수{count}}}",
+  "number_of_users": "{count,plural, other{가입자수 {count}}}",
   "unsubscribe": "구독취소",
   "subscribe": "구독",
   "messages": "메세지",
@@ -128,5 +128,6 @@
   "top_all": "전체",
   "most_comments": "최근 댓글",
   "new_comments": "새 덧글",
-  "active": "활발한"
+  "active": "활발한",
+  "not_a_mod_or_admin": "중재자 또는 관리자가 아닙니다."
 }
