--- a/lib/l10n/intl_el.arb
+++ b/lib/l10n/intl_el.arb
@@ -128,5 +128,6 @@
   "top_all": "Κορυφαία από πάντα",
   "most_comments": "Περισσότερα σχόλια",
   "new_comments": "Νέα σχόλια",
-  "active": "Δραστηριότητα"
+  "active": "Δραστηριότητα",
+  "not_a_mod_or_admin": "Δεν είστε συντονιστής ή διαχειριστής."
 }
