--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -10,7 +10,7 @@
   "url": "URL",
   "title": "제목",
   "body": "내용",
-  "nsfw": "민감한 콘텐츠(후방주의, 성인)",
+  "nsfw": "18+ 콘텐츠",
   "post": "등록",
   "save": "저장",
   "subscribed": "구독",
@@ -28,7 +28,7 @@
   "edit": "수정",
   "delete": "삭제",
   "restore": "복원",
-  "yes": "네",
+  "yes": "예",
   "no": "아니오",
   "avatar": "아바타",
   "banner": "배너",
@@ -38,7 +38,7 @@
   "matrix_user": "메트릭스 사용자",
   "sort_type": "정렬",
   "type": "유형",
-  "show_nsfw": "민감한 콘텐츠 보기",
+  "show_nsfw": "18+ 콘텐츠 보기",
   "send_notifications_to_email": "이메일로 알림 보내기",
   "delete_account": "계정 삭제",
   "saved": "저장한글",
@@ -107,14 +107,14 @@
   "user_already_exists": "사용자가 이미 존재합니다.",
   "number_of_users_online": "{count,plural, other{접속자수 {count}}}",
   "number_of_comments": "{count,plural, other{덧글수 {count}}}",
-  "number_of_posts": "{count,plural, other{게시물 수 {count}}}",
-  "number_of_subscribers": "{count,plural, other{구독자수{count}}}",
+  "number_of_posts": "{count,plural, other{게시물수 {count}}}",
+  "number_of_subscribers": "{count,plural, other{구독자수 {count}}}",
   "number_of_users": "{count,plural, other{가입자수 {count}}}",
   "unsubscribe": "구독취소",
   "subscribe": "구독",
   "messages": "메세지",
   "banned_users": "금지 된 사용자",
-  "delete_account_confirm": "경고 : 모든 데이터가 영구적으로 삭제됩니다. 확인을 위해 비밀번호를 입력하십시오.",
+  "delete_account_confirm": "경고: 모든 데이터가 영구적으로 삭제됩니다. 확인을 위해 비밀번호를 입력하십시오.",
   "new_password": "새 비밀번호",
   "verify_password": "비밀번호 재입력",
   "old_password": "기존 비밀번호",
@@ -126,7 +126,7 @@
   "top_month": "월별",
   "top_year": "년간",
   "top_all": "전체",
-  "most_comments": "최근 댓글",
+  "most_comments": "최근 덧글",
   "new_comments": "새 덧글",
   "active": "활발한",
   "not_a_mod_or_admin": "중재자 또는 관리자가 아닙니다."
