--- a/lib/l10n/intl_pl.arb
+++ b/lib/l10n/intl_pl.arb
@@ -10,10 +10,10 @@
   "url": "URL",
   "title": "Tytuł",
   "body": "Treść",
-  "nsfw": "NSFW",
+  "nsfw": "NSFW (18+)",
   "post": "post",
   "save": "zapisz",
-  "subscribed": "Zasubskrybowane",
+  "subscribed": "Subskrybowane",
   "local": "Lokalne",
   "all": "Wszystko",
   "replies": "Odpowiedzi",
@@ -38,12 +38,12 @@
   "matrix_user": "Login na Matrixie",
   "sort_type": "Sortuj typ",
   "type": "Rodzaj",
-  "show_nsfw": "Pokaż treści NSFW (+18)",
+  "show_nsfw": "Pokaż treści NSFW (18+)",
   "send_notifications_to_email": "Wysyłaj powiadomienia na Email",
   "delete_account": "Usuń Konto",
   "saved": "Zapisane",
   "communities": "Społeczności",
-  "users": "osoby zalogowane",
+  "users": "Osoby zalogowane",
   "theme": "Motyw",
   "language": "Język",
   "hot": "Popularne",
@@ -51,7 +51,7 @@
   "old": "Stare",
   "top": "Najpopularniejsze",
   "chat": "Dyskusja",
-  "admin": "administrator",
+  "admin": "admin",
   "by": "przez",
   "not_an_admin": "Nie jest administratorem.",
   "couldnt_find_post": "Nie udało się znaleźć posta.",
@@ -70,7 +70,7 @@
   "report_reason_required": "Wymagane jest uzasadnienie zgłoszenia.",
   "report_too_long": "Zgłoszenie jest zbyt długie.",
   "couldnt_create_report": "Nie udało się stworzyć zgłoszenia.",
-  "couldnt_resolve_report": "Nie udało się rozwiazać zgłoszenia.",
+  "couldnt_resolve_report": "Nie udało się rozwiązać zgłoszenia.",
   "invalid_post_title": "Nieprawidłowy tytuł posta",
   "couldnt_create_post": "Nie udało się stworzyć posta.",
   "couldnt_like_post": "Nie udało się polubić posta.",
