--- a/lib/l10n/intl_fi.arb
+++ b/lib/l10n/intl_fi.arb
@@ -106,5 +106,28 @@
   "show_avatars": "Näytä avatarit",
   "search": "Etsi",
   "send_message": "Lähetä viesti",
-  "top_day": "Päivän parhaimmat"
+  "top_day": "Päivän parhaimmat",
+  "local": "Paikallinen",
+  "banner": "Banneri",
+  "display_name": "Näyttönimi",
+  "bio": "Kuvaus",
+  "not_a_mod_or_admin": "Et ole moderaattori tai ylläpitäjä.",
+  "invalid_url": "Viallinen URL.",
+  "report_reason_required": "Ilmiannolle tarvitaan selitys.",
+  "report_too_long": "Ilmianto on turhan pitkä.",
+  "couldnt_create_report": "Ilmiantoa ei pystytty luomaan.",
+  "couldnt_resolve_report": "Ilmiantoa ei pystytty selvittämään.",
+  "invalid_community_name": "Viallinen yhteisön nimi.",
+  "not_a_moderator": "Ei moderaattori.",
+  "invalid_password": "Virheellinen salasana. Salasanan on oltava <= 60 merkkiä.",
+  "captcha_incorrect": "Captcha on väärin.",
+  "invalid_username": "Viallinen käyttäjänimi.",
+  "bio_length_overflow": "Käyttäjän kuvaus ei voi olla pidempi kuin 300 merkkiä.",
+  "top_week": "Viikon parhaimmat",
+  "top_month": "Kuukauden parhaimmat",
+  "top_year": "Vuoden parhaimmat",
+  "top_all": "Kaikkien aikojen parhaimmat",
+  "most_comments": "Eniten kommentteja",
+  "new_comments": "Uudet kommentit",
+  "active": "Aktiivinen"
 }
