--- a/lib/l10n/intl_nl.arb
+++ b/lib/l10n/intl_nl.arb
@@ -2,24 +2,24 @@
   "@@locale": "nl",
   "settings": "Instellingen",
   "password": "Wachtwoord",
-  "email_or_username": "E-mail of gebruikersnaam",
-  "posts": "Posts",
+  "email_or_username": "E-mailadres of gebruikersnaam",
+  "posts": "Berichten",
   "comments": "Reacties",
-  "modlog": "Moderatorlog",
-  "community": "Community",
-  "url": "url",
+  "modlog": "Moderatorlogboek",
+  "community": "Gemeenschap",
+  "url": "URL",
   "title": "Titel",
-  "body": "Tekst",
-  "nsfw": "NSFW",
-  "post": "post",
+  "body": "Hoofdtekst",
+  "nsfw": "18+",
+  "post": "bericht",
   "save": "opslaan",
   "subscribed": "Geabonneerd",
   "all": "Alle",
-  "replies": "Reacties",
-  "mentions": "vermeldingen",
+  "replies": "Antwoorden",
+  "mentions": "Vermeldingen",
   "from": "van",
   "to": "aan",
-  "deleted_by_creator": "verwijderd door maker",
+  "deleted_by_creator": "verwijderd door de maker",
   "more": "meer",
   "mark_as_read": "markeer als gelezen",
   "mark_as_unread": "markeer als ongelezen",
@@ -31,12 +31,12 @@
   "no": "nee",
   "avatar": "Avatar",
   "email": "E-mail",
-  "matrix_user": "Matrix gebruikers-id",
+  "matrix_user": "Matrix-gebruiker",
   "sort_type": "Sorteertype",
   "type": "Type",
-  "show_nsfw": "Laat NSFW-inhoud zien",
-  "send_notifications_to_email": "Stuur meldingen naar je email",
-  "delete_account": "Verwijder account",
+  "show_nsfw": "18+inhoud vertonen",
+  "send_notifications_to_email": "Stuur meldingen naar uw e-mailadres",
+  "delete_account": "Account verwijderen",
   "saved": "Opgeslagen",
   "communities": "Gemeenschappen",
   "users": "Gebruikers",
@@ -46,66 +46,88 @@
   "new_": "Nieuw",
   "old": "Oud",
   "top": "Top",
-  "chat": "Praat",
+  "chat": "Babbel",
   "admin": "beheerder",
   "by": "door",
   "not_an_admin": "Niet een beheerder.",
-  "couldnt_find_post": "Kon post niet vinden.",
-  "not_logged_in": "Niet ingelogd.",
-  "site_ban": "Je bent verbannen van deze site",
-  "community_ban": "Je bent verbannen uit deze community.",
-  "downvotes_disabled": "Downvotes geblokkeerd",
-  "locked": "gesloten",
-  "couldnt_create_comment": "Kon reactie niet maken.",
-  "couldnt_like_comment": "Kon reactie niet leuk vinden.",
-  "couldnt_update_comment": "Kon reactie niet bijwerken.",
-  "no_comment_edit_allowed": "Niet toegestaan om reactie te bewerken.",
-  "couldnt_save_comment": "Kon reactie niet opslaan.",
-  "couldnt_get_comments": "Kon reacties niet ophalen.",
-  "couldnt_create_post": "Kon post niet maken.",
-  "couldnt_like_post": "Kon post niet leuk vinden.",
-  "couldnt_find_community": "Kon community niet vinden.",
-  "couldnt_get_posts": "Kon posts niet ophalen",
-  "no_post_edit_allowed": "Niet toegestaan om posts te bewerken.",
-  "couldnt_save_post": "Kon post niet opslaan.",
-  "site_already_exists": "Site bestaat al.",
-  "couldnt_update_site": "Kon site niet bijwerken.",
+  "couldnt_find_post": "Het bericht kon niet gevonden worden.",
+  "not_logged_in": "Niet aangemeld.",
+  "site_ban": "U werd verbannen van deze site",
+  "community_ban": "U werd verbannen uit deze gemeenschap.",
+  "downvotes_disabled": "Neerstemmen uitgeschakeld",
+  "locked": "vergrendeld",
+  "couldnt_create_comment": "Reactie kon niet aangemaakt worden.",
+  "couldnt_like_comment": "Reactie kon niet leuk gevonden worden.",
+  "couldnt_update_comment": "Reactie kon niet bijgewerkt worden.",
+  "no_comment_edit_allowed": "Reactie bewerken is niet toegestaan.",
+  "couldnt_save_comment": "Reactie kon niet opgeslagen worden.",
+  "couldnt_get_comments": "Reacties konden niet opgehaald worden.",
+  "couldnt_create_post": "Bericht kon niet aangemaakt worden.",
+  "couldnt_like_post": "Het bericht kon niet leuk gevonden worden.",
+  "couldnt_find_community": "De gemeenschap kon niet teruggevonden worden.",
+  "couldnt_get_posts": "De berichten konden niet opgehaald worden",
+  "no_post_edit_allowed": "Bericht bewerken is niet toegestaan.",
+  "couldnt_save_post": "De berichten konden niet opgeslagen worden.",
+  "site_already_exists": "Site bestaat reeds.",
+  "couldnt_update_site": "De site kon niet bijgewerkt worden.",
   "invalid_community_name": "Ongeldige naam.",
-  "community_already_exists": "Community bestaat al.",
-  "community_moderator_already_exists": "Community-moderator bestaat al.",
-  "community_follower_already_exists": "Community-volger bestaat al.",
-  "couldnt_update_community": "Kon community niet bijwerken.",
-  "no_community_edit_allowed": "Niet toegestaan om community te bewerken.",
-  "system_err_login": "Systeemfout. Probeer uit te loggen en weer in te loggen.",
-  "community_user_already_banned": "Community-gebruiker reeds verbannen.",
-  "couldnt_find_that_username_or_email": "Kon gebruikersnaam of e-mailadres niet vinden.",
+  "community_already_exists": "Deze gemeenschap bestaat reeds.",
+  "community_moderator_already_exists": "Deze gemeenschaps-moderator bestaat reeds.",
+  "community_follower_already_exists": "Deze gemeenschapsvolger bestaat reeds.",
+  "couldnt_update_community": "De gemeenschap kon niet bijgewerkt worden.",
+  "no_community_edit_allowed": "Gemeenschap bewerken is niet toegestaan.",
+  "system_err_login": "Systeemfout. Probeer af te melden en vervolgens weer aan te melden.",
+  "community_user_already_banned": "Deze gemeenschapsgebruiker werd reeds verbannen.",
+  "couldnt_find_that_username_or_email": "De gebruikersnaam of het e-mailadres kon niet gevonden worden.",
   "password_incorrect": "Wachtwoord incorrect.",
   "registration_closed": "Registratie gesloten",
-  "passwords_dont_match": "Wachtwoorden zijn niet gelijk.",
+  "passwords_dont_match": "Wachtwoorden komen niet overeen.",
   "invalid_username": "Ongeldige gebruikersnaam.",
-  "couldnt_update_user": "Kon gebruiker niet bijwerken.",
-  "couldnt_update_private_message": "Kan beveiligd bericht niet bijwerken.",
-  "couldnt_update_post": "Kon post niet bijwerken",
-  "couldnt_create_private_message": "Kan beveiligd bericht niet maken.",
-  "no_private_message_edit_allowed": "Niet toegestaan om privé berichten te wijzigen.",
-  "post_title_too_long": "Posttitel te lang.",
-  "email_already_exists": "Email bestaat al.",
-  "user_already_exists": "Gebruiker bestaat al.",
+  "couldnt_update_user": "De gebruiker kon niet bijgewerkt worden.",
+  "couldnt_update_private_message": "Het privé-bericht kon niet bijgewerkt worden.",
+  "couldnt_update_post": "De berichten konden niet bijgewerkt worden",
+  "couldnt_create_private_message": "Het privébericht kon niet aangemaakt worden.",
+  "no_private_message_edit_allowed": "Het is niet toegestaan om privé-berichten te wijzigen.",
+  "post_title_too_long": "De berichttitel is te lang.",
+  "email_already_exists": "E-mailadres bestaat reeds.",
+  "user_already_exists": "Gebruiker bestaat reeds.",
   "number_of_users_online": "{count,plural, =1{{count} gebruiker online} other{{count} gebruikers online}}",
   "number_of_comments": "{count,plural, =1{{count} reactie} other{{count} reacties}}",
-  "number_of_posts": "{count,plural, =1{{count} post} other{{count} posts}}",
+  "number_of_posts": "{count,plural, =1{{count} bericht} other{{count} berichten}}",
   "number_of_subscribers": "{count,plural, =1{{count} abonnee} other{{count} abonnees}}",
   "number_of_users": "{count,plural, =1{{count} gebruiker} other{{count} gebruikers}}",
   "unsubscribe": "Afmelden",
   "subscribe": "Abonneren",
-  "messages": "Berichten",
+  "messages": "Boodschappen",
   "banned_users": "Verbannen gebruikers",
-  "delete_account_confirm": "Waarschuwing: dit zal al uw data voorgoed verwijderen, vul uw wachtwoord in om te bevestigen.",
+  "delete_account_confirm": "Waarschuwing: dit zal al uw data voorgoed verwijderen. Vul uw wachtwoord in om te bevestigen.",
   "new_password": "Nieuw wachtwoord",
-  "verify_password": "Herhaal wachtwoord",
+  "verify_password": "Bevestig wachtwoord",
   "old_password": "Oud wachtwoord",
-  "show_avatars": "Toon avatars",
-  "search": "Zoek",
-  "send_message": "Verstuur bericht",
-  "top_day": "Dagelijkse top"
+  "show_avatars": "Avatars tonen",
+  "search": "Zoeken",
+  "send_message": "Boodschap versturen",
+  "top_day": "Dagelijks hoogtepunt",
+  "local": "Lokaal",
+  "banner": "Banier",
+  "display_name": "Weergavenaam",
+  "bio": "Biografie",
+  "not_a_mod_or_admin": "Niet een moderator of beheerder.",
+  "invalid_url": "Ongeldige URL.",
+  "report_reason_required": "Een rapporteringsmotivering is vereist.",
+  "report_too_long": "Het rapport is te lang.",
+  "couldnt_create_report": "Het rapport kon niet aangemaakt worden.",
+  "couldnt_resolve_report": "Het rapport kon niet opgelost worden.",
+  "invalid_post_title": "Ongeldige berichttitel",
+  "not_a_moderator": "Niet een moderator.",
+  "invalid_password": "Ongeldig wachtwoord. Het wachtwoord moet kleiner dan of gelijk aan 60 tekens zijn.",
+  "captcha_incorrect": "Incorrecte Captcha.",
+  "bio_length_overflow": "De gebruikersbiografie mag niet 300 tekens overschrijden.",
+  "top_week": "Wekelijks hoogtepunt",
+  "top_month": "Maandelijks hoogtepunt",
+  "top_year": "Jaarlijks hoogtepunt",
+  "top_all": "Hoogtepunt aller tijden",
+  "most_comments": "Meeste reacties",
+  "new_comments": "Nieuwe reacties",
+  "active": "Actief"
 }
