--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -2,20 +2,20 @@
   "@@locale": "ru",
   "settings": "Настройки",
   "password": "Пароль",
-  "email_or_username": "Электронная почта или имя пользователя",
-  "posts": "Записи",
+  "email_or_username": "Электронная почта или Имя пользователя",
+  "posts": "Посты",
   "comments": "Комментарии",
-  "modlog": "Модлог",
+  "modlog": "Модерация",
   "community": "Сообщество",
   "url": "URL",
   "title": "Название",
   "body": "Тело",
   "nsfw": "NSFW",
-  "post": "запись",
+  "post": "запостить",
   "save": "сохранить",
   "subscribed": "Подписаны",
-  "local": "Местное",
-  "all": "Всё",
+  "local": "Локальные",
+  "all": "Все",
   "replies": "Ответы",
   "mentions": "Упоминания",
   "from": "от",
@@ -33,93 +33,96 @@
   "avatar": "Аватар",
   "banner": "Баннер",
   "display_name": "Отображаемое имя",
-  "bio": "Описание пользователя",
-  "email": "Электронная почта",
-  "matrix_user": "Адрес в Matrix",
+  "bio": "БИО",
+  "email": "Эл. почта",
+  "matrix_user": "Пользователь Matrix",
   "sort_type": "Тип сортировки",
   "type": "Тип",
-  "show_nsfw": "Показывать NSFW-контент",
-  "send_notifications_to_email": "Посылать уведомления на e-mail адрес",
-  "delete_account": "Удалить аккаунт",
+  "show_nsfw": "Показывать NSFW контент",
+  "send_notifications_to_email": "Посылать уведомления на Эл. почту",
+  "delete_account": "Удалить Аккаунт",
   "saved": "Сохранено",
   "communities": "Сообщества",
   "users": "Пользователи",
-  "theme": "Визуальная тема",
+  "theme": "Тема",
   "language": "Язык",
-  "hot": "Популярно",
-  "new_": "Новое",
-  "old": "Старое",
-  "top": "Лучшее",
+  "hot": "Популярные",
+  "new_": "Новые",
+  "old": "Старые",
+  "top": "Лучшие",
   "chat": "Чат",
   "admin": "администратор",
   "by": "от",
   "not_an_admin": "Не администратор.",
-  "couldnt_find_post": "Не получилось найти запись.",
+  "couldnt_find_post": "Не удалось найти пост.",
   "not_logged_in": "Не авторизованы.",
   "site_ban": "Вы были заблокированы на данном сайте",
   "community_ban": "Вы были заблокированы в данном сообществе.",
-  "downvotes_disabled": "Отрицательное голосование отключено",
+  "downvotes_disabled": "Голосование не понравилось отключено",
   "invalid_url": "Недопустимый URL.",
   "locked": "заблокировано",
-  "couldnt_create_comment": "Не получилось создать комментарий.",
-  "couldnt_like_comment": "Не получилось лайкнуть комментарий.",
-  "couldnt_update_comment": "Не получилось обновить комментарий.",
-  "no_comment_edit_allowed": "Невозможно отредактировать комментарий.",
-  "couldnt_save_comment": "Не получилось сохранить комментарий.",
+  "couldnt_create_comment": "Не удалось создать комментарий.",
+  "couldnt_like_comment": "Не удалось лайкнуть комментарий.",
+  "couldnt_update_comment": "Не удалось обновить комментарий.",
+  "no_comment_edit_allowed": "Комментарий редактировать запрещено.",
+  "couldnt_save_comment": "Не удалось сохранить комментарий.",
   "couldnt_get_comments": "Не удалось получить комментарии.",
   "report_reason_required": "Укажите причину жалобы.",
   "report_too_long": "Жалоба слишком длинная.",
   "couldnt_create_report": "Невозможно создать жалобу.",
   "couldnt_resolve_report": "Невозможно разрешить жалобу.",
   "invalid_post_title": "Недопустимый заголовок записи",
-  "couldnt_create_post": "Не получилось создать запись.",
-  "couldnt_like_post": "Не получилось лайкнуть запись.",
-  "couldnt_find_community": "Не получилось найти сообщество.",
-  "couldnt_get_posts": "Не получилось найти записи",
-  "no_post_edit_allowed": "Невозможно отредактировать запись.",
-  "couldnt_save_post": "Не получилось сохранить запись.",
+  "couldnt_create_post": "Не удалось создать пост.",
+  "couldnt_like_post": "Не удалось лайкнуть пост.",
+  "couldnt_find_community": "Сообщество не найдено.",
+  "couldnt_get_posts": "Не удалось найти посты",
+  "no_post_edit_allowed": "Запрещено комментировать пост.",
+  "couldnt_save_post": "Не удалось сохранить пост.",
   "site_already_exists": "Сайт уже существует.",
-  "couldnt_update_site": "Не получилось обновить сайт.",
-  "invalid_community_name": "Неверное имя пользователя.",
+  "couldnt_update_site": "Не удалось обновить сайт.",
+  "invalid_community_name": "Неверное имя.",
   "community_already_exists": "Сообщество уже существует.",
   "community_moderator_already_exists": "Модератор сообщества уже существует.",
   "community_follower_already_exists": "Подписчик сообщества уже существует.",
   "not_a_moderator": "Не модератор.",
-  "couldnt_update_community": "Не получилось обновить сообщество.",
-  "no_community_edit_allowed": "Невозможно отредактировать сообщество.",
+  "couldnt_update_community": "Не удалось обновить Сообщество.",
+  "no_community_edit_allowed": "Редактирование сообщества запрещено.",
   "system_err_login": "Системная ошибка. Попробуйте выйти из системы и вернуться обратно.",
-  "community_user_already_banned": "Пользователь сообщества уже заблокирован.",
-  "couldnt_find_that_username_or_email": "Не получилось найти данное имя пользователя или электронную почту.",
+  "community_user_already_banned": "Пользователь сообщества уже забанен.",
+  "couldnt_find_that_username_or_email": "Указанные имя пользователя или электронную почту найти не удалось.",
   "password_incorrect": "Неверный пароль.",
   "registration_closed": "Регистрация закрыта",
-  "invalid_password": "Некорректный пароль. Пароль должен быть не длиннее 60 символов.",
+  "invalid_password": "Неверный пароль. Пароль должен быть не длиннее 60 символов.",
   "passwords_dont_match": "Пароли не совпадают.",
   "captcha_incorrect": "Некорректная капча.",
   "invalid_username": "Неверное имя пользователя.",
-  "bio_length_overflow": "Описание пользователя не может быть длиннее 300 символов.",
-  "couldnt_update_user": "Не получилось обновить пользователя.",
+  "bio_length_overflow": "БИО пользователя не может быть длиннее 300 символов.",
+  "couldnt_update_user": "Не удалось обновить пользователя.",
   "couldnt_update_private_message": "Не удалось обновить личное сообщение.",
-  "couldnt_update_post": "Не получилось обновить запись",
+  "couldnt_update_post": "Не удалось обновить посты",
   "couldnt_create_private_message": "Не удалось создать личное сообщение.",
-  "no_private_message_edit_allowed": "Не разрешается редактировать личное сообщение.",
-  "post_title_too_long": "Длина названия записи превышает допустимый лимит.",
-  "email_already_exists": "E-mail уже существует.",
+  "no_private_message_edit_allowed": "Не разрешено редактировать личное сообщение.",
+  "post_title_too_long": "Название поста слишком длинное.",
+  "email_already_exists": "Эл. почта уже существует.",
   "user_already_exists": "Пользователь уже существует.",
   "unsubscribe": "Отписаться",
   "subscribe": "Подписаться",
   "messages": "Сообщения",
-  "banned_users": "Забаненные пользователи",
+  "banned_users": "Забаненные Пользователи",
   "delete_account_confirm": "Предупреждение: это действие полностью уничтожит все данные вашего аккаунта. Введите свой пароль для подтверждения.",
-  "new_password": "Новый пароль",
-  "verify_password": "Повторите пароль",
-  "old_password": "Действующий пароль",
-  "show_avatars": "Показывать аватары",
+  "new_password": "Новый Пароль",
+  "verify_password": "Подтвердите Пароль",
+  "old_password": "Старый Пароль",
+  "show_avatars": "Показывать Аватары",
   "search": "Поиск",
-  "send_message": "Послать сообщение",
-  "top_day": "Лучшее за день",
-  "top_week": "Лучшее за неделю",
-  "top_month": "Лучшее за месяц",
-  "top_year": "Лучшее за год",
-  "top_all": "Лучшее за все время",
-  "active": "Активное"
+  "send_message": "Послать Сообщение",
+  "top_day": "Лучшие за День",
+  "top_week": "Лучшие за Неделю",
+  "top_month": "Лучшие за Месяц",
+  "top_year": "Лучшие за Год",
+  "top_all": "Лучшие за Всё Время",
+  "active": "Активные",
+  "not_a_mod_or_admin": "Не модератор и не админинстратор.",
+  "most_comments": "Наиболее Комментируемые",
+  "new_comments": "Новые Комментарии"
 }
