Migrate instance page to mobx + l10 strings (#316)

--- a/assets/l10n/intl_en.arb
+++ b/assets/l10n/intl_en.arb
@@ -215,7 +215,10 @@
   "number_of_users_online": "{formattedCount,plural, =1{{formattedCount} user online} other{{formattedCount} users online}}",
   "@number_of_users_online": {
     "placeholders": {
-      "formattedCount": {}
+      "formattedCount": {
+        "type": "int",
+        "format": "compact"
+      }
     }
   },
   "number_of_comments": "{formattedCount,plural, =1{{formattedCount} comment} other{{formattedCount} comments}}",
@@ -239,13 +242,28 @@
   "number_of_subscribers": "{formattedCount,plural, =1{{formattedCount} subscriber} other{{formattedCount} subscribers}}",
   "@number_of_subscribers": {
     "placeholders": {
-      "formattedCount": {}
+      "formattedCount": {
+        "type": "int",
+        "format": "compact"
+      }
     }
   },
   "number_of_users": "{formattedCount,plural, =1{{formattedCount} user} other{{formattedCount} users}}",
   "@number_of_users": {
     "placeholders": {
-      "formattedCount": {}
+      "formattedCount": {
+        "type": "int",
+        "format": "compact"
+      }
+    }
+  },
+  "number_of_communities": "{formattedCount,plural, =1{{formattedCount} community} other{{formattedCount} communities}}",
+  "@number_of_communities": {
+    "placeholders": {
+      "formattedCount": {
+        "type": "int",
+        "format": "compact"
+      }
     }
   },
   "unsubscribe": "unsubscribe",
@@ -291,5 +309,41 @@
   "show_bot_accounts": "Show Bot Accounts",
   "@show_bot_accounts": {},
   "show_read_posts": "Show Read Posts",
-  "@show_read_posts": {}
+  "@show_read_posts": {},
+  "site_not_set_up": "This site has not yet been set up",
+  "@site_not_set_up": {},
+  "nerd_stuff": "Nerd stuff",
+  "@nerd_stuff": {},
+  "open_in_browser": "Open in browser",
+  "@open_in_browser": {},
+  "cannot_open_in_browser": "Can't open in browser",
+  "@cannot_open_in_browser": {},
+  "about": "About",
+  "@about": {},
+  "see_all": "See all",
+  "@see_all": {},
+  "admins": "Admins",
+  "@admins": {},
+  "trending_communities": "Trending communities",
+  "@trending_communities": {},
+  "communities_of_instance": "Communities of {instance}",
+  "@communities_of_instance": {
+    "placeholders": {
+      "instance": {
+        "type": "String"
+      }
+    }
+  },
+  "day": "day",
+  "@day": {},
+  "week": "week",
+  "@week": {},
+  "month": "month",
+  "@month": {},
+  "six_months": "6 months",
+  "@six_months": {},
+  "add_instance": "Add instance",
+  "@add_instance": {},
+  "instance_added": "Instance successfully added",
+  "@instance_added": {}
 }
