fixed syntax error

--- a/assets/l10n/intl_hi.arb
+++ b/assets/l10n/intl_hi.arb
@@ -17,7 +17,7 @@
   "couldnt_create_comment": "टिप्पणी (कमेंट) नहीं बना पाईं |",
   "couldnt_find_community": "समुदायों नहीं ढूंढ़ पाएं |",
   "community_already_exists": "यह समुदाय पहले स मौजूद है |",
-  "number_of_comments": "{formattedCount,plural, =1{{{ count }} टिप्पणी (कमेंट )} other{{{ count }} टिप्पणियाँ (कोम्मेंट्स )}}",
+  "number_of_comments": "{formattedCount,plural, =1{{ count } टिप्पणी (कमेंट )} other{{ count } टिप्पणियाँ (कोम्मेंट्स )}}",
   "number_of_posts": "{formattedCount,plural, =1{{formattedCount} पोस्ट} other{{formattedCount} पोस्ट्स}}",
   "show_avatars": "अवतार दिखाएँ",
   "send_message": "संदेश भेजें"
