added compact post view

--- a/assets/l10n/intl_en.arb
+++ b/assets/l10n/intl_en.arb
@@ -284,6 +284,12 @@
   "@old_password": {},
   "show_avatars": "Show avatars",
   "@show_avatars": {},
+  "post_style_compact": "Compact View",
+  "@post_style_compact": {},
+  "post_style_rounded_corners": "Rounded Corners",
+  "@post_style_rounded_corners": {},
+  "post_style_shadow": "Card Shadow",
+  "@post_style_shadow": {},
   "search": "search",
   "@search": {},
   "send_message": "Send message",
