Rolled in iOS fixes and other changes from Limbo

--- a/assets/l10n/intl_en.arb
+++ b/assets/l10n/intl_en.arb
@@ -80,6 +80,8 @@
   "@show_nsfw": {},
   "send_notifications_to_email": "Send notifications to Email",
   "@send_notifications_to_email": {},
+  "remove_account": "Remove account",
+  "@remove_account": {},
   "delete_account": "Delete account",
   "@delete_account": {},
   "saved": "Saved",
@@ -276,7 +278,9 @@
   "@messages": {},
   "banned_users": "Banned users",
   "@banned_users": {},
-  "delete_account_confirm": "Warning: this will permanently delete all of your data from this instance. Your data may not be deleted on other, existing instances. Enter your password to confirm.",
+  "remove_account_confirm": "This will delete your account and data from this app. Your account and data will remain on the instance.",
+  "@remove_account_confirm": {},
+  "delete_account_confirm": "Warning: this will permanently delete your account and all of your data from the app AND instance. Your data may not be deleted on other, existing instances. Enter your password to confirm.",
   "@delete_account_confirm": {},
   "new_password": "New password",
   "@new_password": {},
