added post style settings page

--- a/assets/l10n/intl_en.arb
+++ b/assets/l10n/intl_en.arb
@@ -292,8 +292,14 @@
   "@old_password": {},
   "show_avatars": "Show avatars",
   "@show_avatars": {},
+  "show_thumbnails": "Show thumnbails",
+  "@show_thumbnails": {},
   "post_style_compact": "Compact View",
   "@post_style_compact": {},
+  "post_title_size": "Post Title Size",
+  "@post_title_size": {},
+  "post_header_size": "Post Header Size",
+  "@post_header_size": {},
   "post_style_rounded_corners": "Rounded Corners",
   "@post_style_rounded_corners": {},
   "post_style_shadow": "Card Shadow",
