--- a/assets/l10n/intl_en.arb
+++ b/assets/l10n/intl_en.arb
@@ -74,8 +74,10 @@
   "@email": {},
   "matrix_user": "Matrix User",
   "@matrix_user": {},
-  "sort_type": "Sort type",
+  "sort_type": "Post Sort type",
   "@sort_type": {},
+  "comment_sort_type": "Comment Sort type",
+  "@comment_sort_type": {},
   "type": "Type",
   "@type": {},
   "show_nsfw": "Show NSFW content",
@@ -290,9 +292,9 @@
   "@verify_password": {},
   "old_password": "Old password",
   "@old_password": {},
-  "show_avatars": "Show avatars",
+  "show_avatars": "Show Avatars",
   "@show_avatars": {},
-  "show_thumbnails": "Show thumnbails",
+  "show_thumbnails": "Show Thumbnails",
   "@show_thumbnails": {},
   "post_style_compact": "Compact View",
   "@post_style_compact": {},
