fix for #112 subscribe button

--- a/assets/l10n/intl_en.arb
+++ b/assets/l10n/intl_en.arb
@@ -278,6 +278,8 @@
   "@unsubscribe": {},
   "subscribe": "subscribe",
   "@subscribe": {},
+  "pending": "pending",
+  "@pending": {},
   "messages": "Messages",
   "@messages": {},
   "banned_users": "Banned users",
