--- a/assets/l10n/intl_en.arb
+++ b/assets/l10n/intl_en.arb
@@ -312,6 +312,12 @@
   "@search": {},
   "send_message": "Send message",
   "@send_message": {},
+  "top_hour": "Top Hour",
+  "@top_hour": {},
+  "top_six_hour": "Top Six Hour",
+  "@top_six_hour": {},
+  "top_twelve_hour": "Top Twelve Hour",
+  "@top_twelve_hour": {},
   "top_day": "Top Day",
   "@top_day": {},
   "top_week": "Top Week",
