--- a/assets/l10n/intl_en.arb
+++ b/assets/l10n/intl_en.arb
@@ -154,6 +154,10 @@
   "@pinned": {},
   "by": "by",
   "@by": {},
+  "view_on": "View on another instance",
+  "@view_on": {},
+  "foreign_community_info": "Loading the community in the other instance. Note that if this is the first time the community is being viewed in the instance, this process may take a while.",
+  "@foreign_community_info": {},
 
   "error": "Error: {error_text}",
   "@error" :{
