Implement comment context

--- a/assets/l10n/intl_en.arb
+++ b/assets/l10n/intl_en.arb
@@ -445,6 +445,10 @@
   "@new_comments": {},
   "active": "Active",
   "@active": {},
+  "view_all_comments": "View all comments",
+  "@view_all_comments": {},
+  "show_context": "Show context",
+  "@show_context": {},
   "bot_account": "Bot Account",
   "@bot_account": {},
   "show_bot_accounts": "Show Bot Accounts",
