moved strings to l10n

--- a/assets/l10n/intl_en.arb
+++ b/assets/l10n/intl_en.arb
@@ -24,6 +24,46 @@
   "@comments": {},
   "modlog": "Modlog",
   "@modlog": {},
+  "modlog_reason": "Reason",
+  "@modlog_reason": {},
+  "modlog_removed": "removed",
+  "@modlog_removed": {},
+  "modlog_restored": "restored",
+  "@modlog_restored": {},
+  "modlog_locked": "locked",
+  "@modlog_locked": {},
+  "modlog_unlocked": "unlocked",
+  "@modlog_unlocked": {},
+  "modlog_stickied": "stickied",
+  "@modlog_stickied": {},
+  "modlog_unstickied": "unstickied",
+  "@modlog_unstickied": {},
+  "modlog_banned": "banned",
+  "@modlog_banned": {},
+  "modlog_unbanned": "unbanned",
+  "@modlog_unbanned": {},
+  "modlog_appointed": "appointed",
+  "@modlog_appointed": {},
+  "modlog_transferred": "transferred",
+  "@modlog_transferred": {},
+  "modlog_post_separator": "post",
+  "@modlog_post_separator": {},
+  "modlog_comment_separator": "comment",
+  "@modlog_comment_separator": {},
+  "modlog_community_separator": "community",
+  "@modlog_community_separator": {},
+  "modlog_appointed_separator": "as mod of",
+  "@modlog_appointed_separator": {},
+  "modlog_transferred_separator": "to",
+  "@modlog_transferred_separator": {},
+  "modlog_banned_separator": "from community",
+  "@modlog_banned_separator": {},
+  "modlog_admin_separator": "as admin",
+  "@modlog_admin_separator": {},
+  "modlog_nologs": "No more logs to show.",
+  "@modlog_nologs": {},
+  "modlog_by": "by",
+  "@modlog_by": {},
   "community": "Community",
   "@community": {},
   "url": "URL",
