added comment style page

--- a/assets/l10n/intl_en.arb
+++ b/assets/l10n/intl_en.arb
@@ -457,14 +457,26 @@
   "@show_thumbnails": {},
   "post_style_compact": "Compact View",
   "@post_style_compact": {},
-  "post_title_size": "Post Title Size",
+  "post_title_size": "Title Size",
   "@post_title_size": {},
-  "post_header_size": "Post Header Size",
+  "post_header_size": "Header Size",
   "@post_header_size": {},
+  "post_body_size": "Body Size",
+  "@post_body_size": {},
   "post_style_rounded_corners": "Rounded Corners",
   "@post_style_rounded_corners": {},
   "post_style_shadow": "Card Shadow",
   "@post_style_shadow": {},
+  "comment_title_size": "Title Size",
+  "@comment_title_size": {},
+  "comment_indent_width": "Indent Width",
+  "@comment_indent_width": {},
+  "comment_pill_size": "Pill Size",
+  "@comment_pill_size": {},
+  "comment_body_size": "Body Size",
+  "@comment_body_size": {},
+  "comment_time_stamp": "Time Stamp Size",
+  "@comment_time_stamp": {},
   "search": "search",
   "@search": {},
   "send_message": "Send message",
