Make strings localized for settings folder

--- a/assets/l10n/intl_en.arb
+++ b/assets/l10n/intl_en.arb
@@ -14,12 +14,24 @@
   "@post_style": {},
   "comment_style": "Comment Style",
   "@comment_style": {},
+  "add_account": "Add account",
+  "@add_account": {},
   "password": "Password",
   "@password": {},
   "email_or_username": "Email or Username",
   "@email_or_username": {},
   "totp_2fa_token": "TOTP 2FA Token (if enabled)",
   "@totp_2fa_token": {},
+  "verification_email_sent": "Verification email sent",
+  "@verification_email_sent": {},
+  "registration_application_sent": "Registration application sent",
+  "@registration_application_sent": {},
+  "select_instance": "select_instance",
+  "@select_instance": {},
+  "sign_in": "Sign in",
+  "@sign_in": {},
+  "register": "Register",
+  "@register": {},
   "posts": "Posts",
   "@posts": {},
   "comments": "Comments",
@@ -138,6 +150,8 @@
   "@show_everything_feed_explanation": {},
   "use_in_app_browser": "Use in-app browser",
   "@use_in_app_browser": {},
+  "convert_webp_to_png": "Convert webp images to png",
+  "@convert_webp_to_png": {},
   "other_settings": "Other",
   "@other_settings": {},
   "disable_animations": "Disable animations",
@@ -385,7 +399,6 @@
   "@messages": {},
   "banned_users": "Banned users",
   "@banned_users": {},
-
   "add_user_or_instance": "Add a user account or an instance",
   "@add_user_or_instance": {},
   "add_user": "Add user account",
@@ -408,9 +421,12 @@
   "@import_settings": {},
   "import_successful" : "Import successful",
   "@import_successful": {},
-
+  "instance_url": "instance url",
+  "@instance_url": {},
   "add_instance": "Add instance",
   "@add_instance": {},
+  "instance_not_found": "instance not found",
+  "@instance_not_found": {},
   "instance_added": "Instance successfully added",
   "@instance_added": {},
   "remove_instance": "Remove instance",
@@ -430,8 +446,12 @@
   "@block":{},
   "block_user": "Block user",
   "@block_user":{},
+  "no_users_blocked": "No users blocked",
+  "@no_users_blocked":{},
   "block_community": "Block community",
   "@block_community":{},
+  "no_communities_blocked": "No communities blocked",
+  "@no_communities_blocked":{},
   "unblock": "Unblock",
   "@unblock":{},
   "unblock_user": "Unblock user",
@@ -674,5 +694,8 @@
   },
   "try_again": "Try Again",
   "@try_again": {
+  },
+  "kbin_instances_not_supported": "Please note that kbin instances are not supported at present.",
+  "@kbin_instances_not_supported": {
   }
 }
